[package]
name = "prml-attestation"
version = "2.0.0"
authors = ["Centrality Developers <support@centrality.ai>"]
edition = "2018"

[dependencies]
codec = { package = "parity-scale-codec", version = "1.3.5", default-features = false, features = ["derive"] }
sp-core = { default-features = false, path = "../../primitives/core" }
sp-io = { default-features = false, path = "../../primitives/io" }
sp-runtime = { default-features = false, path = "../../primitives/runtime" }
frame-support = { default-features = false, path = "../../frame/support" }
frame-system = { default-features = false, path = "../../frame/system" }

[features]
default = ["std"]
std = [
	"codec/std",
	"sp-core/std",
	"sp-runtime/std",
	"frame-support/std",
	"frame-system/std",
]
